# cmake-sdl-template

./: .gitignore  CMakeLists.txt
include/: get_res_path.h
src/: main.c
